# ActiveETF

./: CLAUDE.md  README.md
scraper/: .env.local.example  .gitignore  pyproject.toml
scraper/migrations/: 001_schema.sql  002_dashboard_overview_views.sql  003_cross_holdings_rotation.sql  004_open_position.sql  005_etf_metrics_bench_inception.sql
scraper/scripts/: backfill.py  backfill_aggregates.py  backfill_bench_inception.py  backfill_closes.py  probe.py
scraper/src/activeetf/: db.py  diff.py  finmind.py  metrics.py  models.py  pipeline.py  registry.py  validate.py
scraper/src/activeetf/adapters/: ab.py  allianz.py  base.py  (+13 more)
scraper/tests/: test_adapter_ab.py  test_adapter_allianz.py  test_adapter_capital.py  test_adapter_cathay.py  test_adapter_ctbc.py  test_adapter_fsitc.py  test_adapter_fubon.py  test_adapter_fuhua.py  test_adapter_jpm.py  test_adapter_kgi.py  test_adapter_mega.py  test_adapter_nomura.py  test_adapter_tsit.py  test_adapter_uni.py  test_adapter_yuanta.py  test_aggregates.py  test_backfill.py  test_backfill_bench_inception.py  test_db.py  test_diff.py  test_finmind.py  test_metrics.py  test_metrics_picking.py  test_migration_bench_inception.py  test_models.py  test_pipeline.py  test_radar.py  test_registry.py  test_validate.py
scraper/tests/fixtures/: ab_00404A.json  allianz_00984A.json  capital_00992A.html  capital_00992A.json  cathay_00400A.xlsx  ctbc_00406A.json  fubon_00405A.html  jpm_00401A.xlsx  mega_00996A.html  nomura_00980A.json  tsit_00986A.html  tsit_00987A.html  tsit_00987A_tbody_header.html  uni_00981A.json  yuanta_00990A.json
(+92 files in other folders)
