[project]
name = "activeetf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jerry Lin", email = "zheyulin@innov.tvbs.com.tw" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "responses>=0.26.2",
]
